header-links-responsive

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,6 @@
 
+/* תיקונים למובייל: צבע של כרטיס, להבהיר, כותרות משמאל- לסדר (אולי להרחיב את הטווח שלהם) */
+
 :root {
   width: 100%;
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
