--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -62,3 +62,14 @@
     font-weight: normal;
   }
   
+  @media screen and (max-width: 600px) {
+    .header-links{
+      display: flex;
+      flex-direction: column;
+      text-align: left;
+    }
+
+    .header-link{
+      padding: 0px;
+    }
+  }
